fix: Change min-width media to 376 from 375 to avoid styles overriding on small screens

--- a/css/media.css
+++ b/css/media.css
@@ -53,7 +53,7 @@
     transition: transform 350ms ease-out;
   }
 
-  #navbar__list[data-visible="true"] {
+  #navbar__list[data-visible='true'] {
     transform: translateX(0);
   }
 
@@ -77,7 +77,7 @@
   }
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 376px) {
   .mobile-nav-toggle {
     display: none;
   }
